--- a/source/styles/_partial/article.styl
+++ b/source/styles/_partial/article.styl
@@ -231,9 +231,6 @@
   justify-content space-between
 
 .date
-  color color-grey
-  margin-bottom gutter-size
-
   .home &
     margin-bottom 0
 
@@ -264,3 +261,13 @@
     content '#'
     color #E0E8ED
     margin-right .2rem
+
+.meta
+  display: flex
+
+.meta-ele
+  border-radius: 12px
+  background-color: #f2f1f2
+  padding: 0 1rem
+  margin-left: 1rem
+  font-size: 0.8rem
