--- a/_partial/aboutme.pug
+++ b/_partial/aboutme.pug
@@ -1,17 +1,12 @@
-.about-me-mask
-  .about-me-wrap
-    .about-me__header
-      .avatar
-        img(src=theme.avatar)
-    ul.socials
-      each item, name in theme.socials
-        li.social-item
-          span.label
-            img(src='/images/socials/' + name + '.svg', alt=item)
-          -var isLink = ['https', 'http', 'www'].some(function (prefix) {
-          -  return item.indexOf(prefix) > -1;
-          -});
-          -if (isLink)
-            a(href=url_for(item), target="_blank", title=item)= item
-          -else
-            span= item
+.about-me-wrap
+  .about-header 
+    div.about__title="About"
+    a.domain=theme.domain
+
+  .about-content=theme.description
+
+  .about-author
+    span Author
+    include ./profile.pug
+    a.button="Visit"
+    
