--- a/layout/post.pug
+++ b/layout/post.pug
@@ -7,7 +7,8 @@ block content
       .meta 
         include ../_partial/profile
         .date.meta-ele #{moment(page.date).format(theme.date_format)}
-        a.meta-data.meta-ele(href=page.MetadataUrl) Meta Data page.serverVerificationMetadataRefer 
+        if page.serverVerificationMetadataRefer
+          a.meta-data.meta-ele(href=page.MetadataUrl) Meta Data #{page.serverVerificationMetadataRefer} 
 
       .content!= page.content
       if page.tags
