--- a/_partial/footer.pug
+++ b/_partial/footer.pug
@@ -1,7 +1,13 @@
 footer.container
   .rights
     span Powered by 
-    a(href="http://hexo.io", target="_blank") Hexo
+    a(href="http://hexo.io", target="_blank") Hexo 
+    span &
+    a(href="https://www.metaspaces.me/", target="_blank")  Meta Space
     span , Theme 
     a(href="https://github.com/gary-Shen/hexo-theme-bear", target="_blank") Bear
     span .
+    div 
+      a(href="https://www.metanetwork.online/", target="_blank") Meta Network 
+      span | 
+      a(href="https://meta-io.gitbook.io/meta-wiki/how-to-use/how-to-build-your-own-meta-space", target="_blank") Meta Wiki
