--- a/source/styles/_partial/aboutme.styl
+++ b/source/styles/_partial/aboutme.styl
@@ -61,6 +61,7 @@
     margin-right: 1rem
 
   .button
+    cursor pointer
     margin-left: 2rem
     background-color: #a7b0b3
     border-radius: 12px
