--- a/_partial/layout.pug
+++ b/_partial/layout.pug
@@ -7,6 +7,8 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
 
+    !=open_graph({ image: page.cover || config.avatar || null })
+
     -var title = page.title
     title= title ? title : theme.title
     if theme.favicon
