--- a/layout/archive.pug
+++ b/layout/archive.pug
@@ -13,6 +13,6 @@ block content
             .post-archive__content
               .post-archive__month= time(post.date, 'MM月')
               .post-archive__body
-                a.post-archive__title(href=url_for(post.path))= post.title || '未命名'
+                a.post-archive__title(href=url_for(post.path))= post.title || 'Untitled'
                 .post-archive__excerpt
                   .post-archive__excerpt-content!= post.excerpt
